Add static example and fix migration

--- a/.docker/nginx.conf
+++ b/.docker/nginx.conf
@@ -12,7 +12,18 @@ http {
             listen  [::]:8000;
             server_name  localhost;
 
+            location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+                  expires 7d;
+                  add_header Cache-Control "public";
+                  proxy_cache_key $scheme://$host$uri$is_args$query_string;
+                  proxy_pass http://web;
+            }
+
             location / {
+                try_files _ @backend;
+            }
+
+            location @backend {
                 proxy_pass http://web;
 
                 proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
@@ -20,5 +31,6 @@ http {
 
                 proxy_ssl_server_name on;
             }
+
       }
 }
